fix body sitting too low

--- a/style.css
+++ b/style.css
@@ -4,8 +4,7 @@
 
 body {
   background: linear-gradient(60deg, lightyellow, skyblue);
-  min-height: 100vh;
-  height: 100%;
+  height: 100vh;
   font-family: "Karla", sans-serif;
   font-weight: 400;
   color: #525b76;
@@ -15,8 +14,9 @@ body {
 h1 {
   text-align: center;
   font-weight: 700;
-  margin: 16px 0;
+  padding: 16px 0 8px 0;
   font-size: 32px;
+  margin: 0;
 }
 
 #todo-container {
